--- a/examples/starter-agency/src/styles/acfBlocks/team-block.css
+++ b/examples/starter-agency/src/styles/acfBlocks/team-block.css
@@ -12,6 +12,9 @@
       @apply mb-5 rounded-full aspect-1 max-w-[250px] shadow-xl;
       picture {
       }
+      img {
+        @apply rounded-full;
+      }
     }
     .social-container {
       @apply flex justify-center gap-4 mt-5;
