--- a/examples/starter-agency/src/styles/tailwind.css
+++ b/examples/starter-agency/src/styles/tailwind.css
@@ -14,6 +14,7 @@
 @import "acfBlocks/accordion-block.css";
 @import "acfBlocks/team-block.css";
 @import "acfBlocks/pricing-block.css";
+@import "acfBlocks/testimonials-block.css";
 
 @layer base {
   /* Menu */
