--- a/examples/starter-agency/src/styles/cf7.css
+++ b/examples/starter-agency/src/styles/cf7.css
@@ -1,15 +1,18 @@
 .contact-form {
   @apply w-full max-w-md p-10 mx-auto mb-10 rounded-lg shadow-lg;
+  @apply text-upper-spaced;
+
   input {
     &[type="email"],
     &[type="text"],
     &[type="url"],
     &[type="tel"],
-    &[type="number"] {
+    &[type="number"],
+    &[type="date"] {
       @apply w-full styled-input;
     }
     &[type="range"] {
-      @apply w-full;
+      @apply w-full mt-3;
     }
     &[type="file"] {
       @apply py-3;
@@ -18,20 +21,15 @@
     &[type="checkbox"] {
       @apply my-2 mr-1 text-highlight;
     }
-    &[type="date"] {
-    }
   }
   .form-field {
     @apply mb-4;
     &.form-field-text {
     }
-    &.form-field-email {
+    &.form-field-range {
+      @apply mt-10;
     }
-    &.form-field-date {
-      input {
-        @apply w-1/2 ml-5;
-      }
-    }
+
     &.form-field-file {
       input {
         @apply mx-3;
@@ -51,7 +49,7 @@
     @apply flex justify-end mt-5;
   }
   .submit-button {
-    @apply bg-black btn hover:bg-highlight;
+    @apply tracking-wider uppercase bg-black btn hover:bg-highlight;
   }
   .error,
   .danger {
