--- a/examples/starter-agency/src/styles/acfBlocks/features-block.css
+++ b/examples/starter-agency/src/styles/acfBlocks/features-block.css
@@ -7,7 +7,7 @@
     .feature {
       @apply space-y-4;
       img {
-        @apply max-w-[60px];
+        @apply w-[80px];
       }
       .intro {
         .headline {
