--- a/examples/starter-agency/src/styles/base.css
+++ b/examples/starter-agency/src/styles/base.css
@@ -8,10 +8,10 @@
   }
 
   h1 {
-    @apply text-3xl font-heading leading-heading sm:text-4xl;
+    @apply mb-5 text-3xl font-heading leading-heading sm:text-4xl;
   }
   h2 {
-    @apply text-2xl font-heading leading-heading sm:text-3xl;
+    @apply mb-5 text-2xl font-heading leading-heading sm:text-3xl;
   }
   h3 {
     @apply text-xl font-heading leading-heading sm:text-2xl;
